--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEXUS | 未来科技体验</title>
+    <title>AKai | 未来科技体验</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@300;500&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -583,7 +583,7 @@
     <header id="header">
         <div class="container">
             <nav>
-                <a href="#" class="logo">NEXUS</a>
+                <a href="#" class="logo">AKai</a>
                 <ul class="nav-links">
                     <li><a href="#home">首页</a></li>
                     <li><a href="#features">功能</a></li>
@@ -615,7 +615,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>探索数字未来的无限可能</h1>
-                <p>NEXUS将前沿技术与卓越设计完美融合，为您打造前所未有的数字体验。进入一个充满创新与可能性的新世界。</p>
+                <p>AKai将前沿技术与卓越设计完美融合，为您打造前所未有的数字体验。进入一个充满创新与可能性的新世界。</p>
                 <div class="btn-group">
                     <a href="#products" class="btn">探索产品</a>
                     <a href="#" class="btn btn-outline">了解更多</a>
@@ -660,7 +660,7 @@
                         <i class="fas fa-desktop" style="font-size: 60px; color: white;"></i>
                     </div>
                     <div class="product-content">
-                        <h3>NEXUS OS</h3>
+                        <h3>AKai OS</h3>
                         <p>下一代操作系统，重新定义人机交互体验。</p>
                         <a href="#product-1" class="btn btn-outline" style="margin-top: 15px;">查看详情</a>
                     </div>
@@ -670,7 +670,7 @@
                         <i class="fas fa-server" style="font-size: 60px; color: white;"></i>
                     </div>
                     <div class="product-content">
-                        <h3>NEXUS Cloud</h3>
+                        <h3>AKai Cloud</h3>
                         <p>高性能云服务平台，为您的业务提供强大支持。</p>
                         <a href="#product-2" class="btn btn-outline" style="margin-top: 15px;">查看详情</a>
                     </div>
@@ -680,7 +680,7 @@
                         <i class="fas fa-mobile-alt" style="font-size: 60px; color: white;"></i>
                     </div>
                     <div class="product-content">
-                        <h3>NEXUS Mobile</h3>
+                        <h3>AKai Mobile</h3>
                         <p>移动端解决方案，让您随时随地保持连接。</p>
                         <a href="#product-3" class="btn btn-outline" style="margin-top: 15px;">查看详情</a>
                     </div>
@@ -693,7 +693,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <h3>NEXUS</h3>
+                    <h3>AKai</h3>
                     <p>重新定义数字体验，创造无限可能。</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -705,9 +705,9 @@
                 <div class="footer-column">
                     <h3>产品</h3>
                     <ul>
-                        <li><a href="#product-1">NEXUS OS</a></li>
-                        <li><a href="#product-2">NEXUS Cloud</a></li>
-                        <li><a href="#product-3">NEXUS Mobile</a></li>
+                        <li><a href="#product-1">AKai OS</a></li>
+                        <li><a href="#product-2">AKai Cloud</a></li>
+                        <li><a href="#product-3">AKai Mobile</a></li>
                         <li><a href="#products">所有产品</a></li>
                     </ul>
                 </div>
@@ -731,7 +731,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 NEXUS科技 - 重新定义数字体验</p>
+                <p>&copy; 2023 AKai科技 - 重新定义数字体验</p>
             </div>
         </div>
     </footer>
@@ -973,3 +973,4 @@
     </script>
 </body>
 </html>
+
